--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "element-ui": "^1.3.2",
+    "knex": "^0.13.0",
     "openlayers": "^4.1.1",
+    "pg": "^6.2.2",
     "vue": "^2.3.3",
     "vue-router": "^2.3.3",
     "vuex": "^2.3.1"
