--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "dotenv": "^4.0.0",
+    "dotenv-safe": "^4.0.4",
     "element-ui": "^1.3.2",
     "knex": "^0.13.0",
     "openlayers": "^4.1.1",
@@ -38,6 +38,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "dotenv-webpack": "^1.5.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^2.0.7",
