--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "axios": "^0.16.1",
     "dotenv-safe": "^4.0.4",
     "element-ui": "^1.3.2",
     "knex": "^0.13.0",
+    "lodash": "^4.17.4",
     "openlayers": "^4.1.1",
     "pg": "^6.2.2",
     "vue": "^2.3.3",
@@ -54,13 +56,13 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
