--- a/package.json
+++ b/package.json
@@ -6,41 +6,38 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "node api-server/api-server.js",
     "api": "node api-server/api-server.js",
     "build": "node build/build.js",
+    "report": "npm run build --report",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "@google/maps": "^0.3.1",
-    "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "dotenv-safe": "^4.0.4",
-    "element-ui": "^1.3.2",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
-    "openlayers": "^4.1.1",
-    "pg": "^6.2.2",
-    "vue": "^2.3.3",
-    "vue-axios": "^2.0.2",
-    "vue-progressbar": "^0.7.2",
-    "vue-router": "^2.3.3",
-    "vuex": "^2.3.1"
+    "pg": "^6.2.4",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
+    "axios": "^0.16.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "dotenv-webpack": "^1.5.0",
+    "element-ui": "^1.3.6",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^2.0.7",
@@ -50,30 +47,34 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-node": "^4.2.2",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "openlayers": "^4.2.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.5",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
+    "shelljs": "^0.7.8",
+    "url-loader": "^0.5.9",
+    "vue": "^2.3.4",
+    "vue-axios": "^2.0.2",
     "vue-loader": "^12.1.0",
+    "vue-progressbar": "^0.7.2",
+    "vue-router": "^2.3.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.3.4",
+    "vuex": "^2.3.1",
     "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "engines": {
     "node": ">= 4.0.0",
