--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   },
   "dependencies": {
     "@google/maps": "^0.3.1",
+    "basic-auth": "^1.1.0",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2",
     "dotenv-safe": "^4.0.4",
+    "express": "^4.15.2",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "pg": "^6.2.4",
